# wg14_strings

./: .gitattributes  CMakeLists.txt  Readme.md
cmake/: ProjectConfig.cmake.in
include/wg14_strings/: config.h
src/wg14_strings/: impl.c
test/: CMakeLists.txt  benchmark_string_test.c  string_test.c  test_common.h  ticks_clock.h
